First prototype of standings.